--- a/huahua/views/index.html
+++ b/huahua/views/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="renderer" content="webkit">
 		<title>花花</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/font-awesome/css/font-awesome.min.css"/>
 		<link rel="stylesheet" type="text/css" href="stylesheets/common.css"/>
